--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
               </div>
             </div>
           </li>
+          <div></div>
 
           <li class="latest-videos-item">
             <div class="item-latest-videos">
