--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
               </div>
             </div>
           </li>
-          <div></div>
 
           <li class="latest-videos-item">
             <div class="item-latest-videos">
@@ -98,6 +97,9 @@
       </section>
     </div>
   </main>
+  <div>
+    <ul><li>salom</li></ul>
+  </div>
 
   <script src="js/main.js"></script>
 </body>
